--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "express-validator": "^7.1.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "moment": "^2.29.4",
